[package]
name = "homebrew-workers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.8"
axum-macros = "0.1.2"
deno_console = "0.42.0"
deno_core = "0.124.0"
deno_crypto = "0.56.0"
deno_fetch = "0.65.0"
deno_runtime = "0.50.0"
deno_tls = "0.29.0"
deno_url = "0.42.0"
deno_web = "0.73.0"
deno_webidl = "0.42.0"
rand = "0.8.5"
serde = "1.0.136"
tokio = { version = "1.17.0", features = ["full"] }
v8 = "0.41.0"
