[package]
name = "homebrew-workers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "cli", "entity", "migration", "api", "workers", "workers/session", "workers/ext/kv", "workers/ext/utils"]

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
workers = { path = "workers"}
entity = { path = "entity" }
migration = { path = "migration" }
api = { path = "api" }
dotenv = "0.15.0"
