[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = { version = "0.4.8", features = ["json", "headers", "http1"] }
axum-macros = "0.1.2"
tokio = { version = "1.17.0", features = ["full"] }
entity = { path = "../entity" }
migration = { path = "../migration" }
jsonwebtoken = "8.0.1"
serde_json = "1.0.79"
serde = "1.0.136"
once_cell = "1.8"
dotenv = "0.15.0"
tower = { version = "0.4.12", features = ["full"] }
tower-http = { version = "0.2.5", features = ["full"] }
pin-project = "1.0.10"
rand = "0.8.5"
chrono = "0.4.19"
