[package]
name = "workers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.8"
axum-macros = "0.1.2"
deno_console = "0.44.0"
deno_core = "0.126.0"
deno_crypto = "0.58.0"
deno_fetch = "0.67.0"
deno_runtime = "0.52.0"
deno_tls = "0.31.0"
deno_url = "0.44.0"
deno_web = "0.75.0"
deno_webidl = "0.44.0"
dotenv = "0.15.0"
rand = "0.8.5"
serde = "1.0.136"
tokio = { version = "1.17.0", features = ["full"] }
v8 = "0.41.0"
rust-s3 = "0.30.0"
async_zip = "0.0.6"
entity = { path = "../entity" }
migration = { path = "../migration" }
hyper = "0.14.18"