[package]
name = "workers"
version = "0.1.0"
edition = "2021"

[build-dependencies]
deno_console = "0.44.0"
deno_core = "0.126.0"
deno_crypto = "0.58.0"
deno_fetch = "0.67.0"
deno_runtime = "0.52.0"
deno_tls = "0.31.0"
deno_url = "0.44.0"
deno_web = "0.75.0"
deno_webidl = "0.44.0"
deno_websocket = "0.49.0"
deno_webstorage = "0.39.0"
deno_broadcast_channel = "0.38.0"
deno_webgpu = "0.45.0"
deno_ffi = "0.31.0"
deno_net = "0.36.0"
deno_http = "0.38.0"
kv = { path = "./ext/kv" }
lzzzz = "1.0.3"

[dependencies]
axum = "0.4.8"
axum-macros = "0.1.2"
deno_console = "0.44.0"
deno_core = "0.126.0"
deno_crypto = "0.58.0"
deno_fetch = "0.67.0"
deno_runtime = "0.52.0"
deno_tls = "0.31.0"
deno_url = "0.44.0"
deno_web = "0.75.0"
deno_webidl = "0.44.0"
deno_websocket = "0.49.0"
deno_webstorage = "0.39.0"
deno_broadcast_channel = "0.38.0"
deno_webgpu = "0.45.0"
deno_ffi = "0.31.0"
deno_net = "0.36.0"
deno_http = "0.38.0"
kv = { path = "./ext/kv" }
dotenv = "0.15.0"
rand = "0.8.5"
serde = "1.0.136"
tokio = { version = "1.17.0", features = ["full"] }
v8 = "0.41.0"
rust-s3 = "0.30.0"
async_zip = "0.0.6"
entity = { path = "../entity" }
migration = { path = "../migration" }
hyper = "0.14.18"
lzzzz = "1.0.3"
once_cell = "1.10.0"
